# Pandemic_Planner

./: CMakeLists.txt  README.md
data/: COVIDTEST.csv
src/: Hospital.cpp  Hospital.h  State.cpp  State.h  WeeklyStats.cpp  WeeklyStats.h  crow_all.h  dataInput.cpp  dataInput.h  main.cpp
test-data/: testFile1.csv
test-unit/: test.cpp
visuals/: home.html
visuals/css/: home.css
visuals/js/: home.js
